test/compile_fail/static_perfect_map_empty_keys.cpp
#include "frozenchars/static_perfect_map.hpp"

auto empty_map = frozenchars::StaticPerfectMap<int>{};
